Fixed Readme and cleaned project

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 Project made by Eugene Griskov as a 3rd coursework assigment for a core programming module at University of Leeds
+
+About Project:
+This a sample ray casting engine (very similar to Wolfenstein 3d)
+Build on Python 3 and PyGame
+
 Bibliography:
 http://www.permadi.com/tutorial/raycast/index.html
 http://dev.opera.com/articles/view/creating-pseudo-3d-games-with-html-5-can-1/
@@ -6,5 +11,8 @@ http://dev.opera.com/articles/view/3d-games-with-canvas-and-raycasting-part/
 Sprite source:
 http://www.areyep.com/RIPandMCS-TextureLibrary.html
 
-THANKS TO:
-John D. Carmack for making this algorithm popular and opening source codes of engines
+Thanks To:
+John D. Carmack for making this algorithm popular, opening source code of his engines and my happy childhood.
+
+License:
+None... Use it where you want it and how you want it.
